--- a/docs/2023S.md
+++ b/docs/2023S.md
@@ -3,15 +3,9 @@
 2. 根据这个[diff文件](https://github.com/chenzhiy2001/code-debug/blob/master/docs/diff-rCore-Tutorial-Code-2023S-kernel.diff)修改代码，然后进入user目录，根据这个[diff文件](https://github.com/chenzhiy2001/code-debug/blob/master/docs/diff-rCore-Tutorial-Code-2023S-user.diff)修改代码，然后再跑一遍，确保能正常运行
 3. 下载SiFive提供的[risc-v工具链](https://static.dev.sifive.com/dev-tools/riscv64-unknown-elf-gcc-8.3.0-2020.04.1-x86_64-linux-ubuntu14.tar.gz)。下载后将该文件复制到home目录下并解压. 将其中的bin/文件夹加入环境变量.
 4. `cd ..../your_dir/ && git clone https://github.com/chenzhiy2001/code-debug.git && cd code-debug/ && npm install` (确保您已经安装了较新版本的npm)
-5. 打开vscode，打开your_dir/code-debug/文件夹
-6. 由于rCore代码出现变化，一些硬编码的数据要更改：（改成一个vscode设置选项可能更方便，欢迎pr:)
-    1. code-debug/src/mibase.ts
-        1. 1255行，65改成79
-        2. 1264行和343行，135改成148
-        3. 1281行，30改成43
-    2. code-debug/src/frontend/extension.ts
-        1. 15行initproc改成ch9b_initproc
-        2. 16行改成您要debug的rCore的位置，比如os.homedir() + "/rCore-Tutorial-Code-2023S"
+5. 打开vscode，打开your_dir/code-debug/文件夹.
+6. 切换到`br-chenzhiy2001-hardcode-for-2023S`分支，然后将code-debug/src/frontend/extension.ts中的16行改成您要debug的rCore的位置，比如os.homedir() + "/rCore-Tutorial-Code-2023S"，再`npm install`.
+    1. 如果您不想这么做，而是想留在`master`分支，那么请参照[这里](#硬编码数据修改).
 7. 保存，然后按f5,会弹出一个新的vscode窗口. 在新窗口中打开rCore-Tutorial-Code-2023S/
 8. 在 .vscode 文件夹中添加 launch.json文件，并输入以下内容（注意有三处`${userHome}/your/path/to/rCore-Tutorial-Code-2023S`要修改成你的rCore的位置），保存后再编译运行一遍rCore，然后按F5就可以启动gdb并调试。
    ```
@@ -74,3 +68,14 @@
 1. 按continue按钮(`|▷`)开始运行rCore-Tutorial.接下来不停按`|▷`就行了.
     1. 当运行到位于内核出口的断点时，插件会自动切换到用户态的断点
     1. 在用户态程序中如果想观察内核内的执行流，可以点击`gotokernel`按钮，然后点击继续按钮，程序会停在内核的入口断点，这时，可以先把内核出口断点设置好（点击`setKernelOutBreakpoints`按钮），接下来，可以在内核态设置断点，点击继续，运行到内核的出口断点之后，会回到用户态。
+
+## 硬编码数据修改
+改成一个vscode设置选项可能更方便，欢迎pr:
+
+1. code-debug/src/mibase.ts
+    1. 1255行，65改成79
+    2. 1264行和343行，135改成148
+    3. 1281行，30改成43
+2. code-debug/src/frontend/extension.ts
+    1. 15行initproc改成ch9b_initproc
+    2. 16行改成您要debug的rCore的位置，比如os.homedir() + "/rCore-Tutorial-Code-2023S"
