--- a/docs/2023S.md
+++ b/docs/2023S.md
@@ -64,7 +64,7 @@
 1. 按下清除所有断点（`removeAllCliBreakpoints`）按钮，在右上角，🗑垃圾桶图标
 1. 按下设置内核入口（`setKernelInBreakpoints`）按钮
 1. 按下出口断点（`setKernelOutBreakpoints`）按钮
-1. 设置你想要的内核代码和用户程序代码的断点（推荐在main.rs的`trap::init()`设置一个，在ch9b_initproc.rs的`println!("aaaa")`语句设置一个）
+1. 设置你想要的内核代码和用户程序代码的断点（推荐在main.rs的`trap::init()`设置一个，在ch9b_initproc.rs的`println!("aaaa")`语句设置一个,如果不行的话设置在`fn main() -> i32 {`处）
 1. 按continue按钮(`|▷`)开始运行rCore-Tutorial.接下来不停按`|▷`就行了.
     1. 当运行到位于内核出口的断点时，插件会自动切换到用户态的断点
     1. 在用户态程序中如果想观察内核内的执行流，可以点击`gotokernel`按钮，然后点击继续按钮，程序会停在内核的入口断点，这时，可以先把内核出口断点设置好（点击`setKernelOutBreakpoints`按钮），接下来，可以在内核态设置断点，点击继续，运行到内核的出口断点之后，会回到用户态。
