update readme and fix lint

--- a/docs/2023S.md
+++ b/docs/2023S.md
@@ -1,13 +1,25 @@
 ## 安装
-1. 运行一遍rCore-Tutorial-Code-2023S ch9
-2. 根据这个[diff文件](https://github.com/chenzhiy2001/code-debug/blob/master/docs/diff-rCore-Tutorial-Code-2023S-kernel.diff)修改代码，然后进入user目录，根据这个[diff文件](https://github.com/chenzhiy2001/code-debug/blob/master/docs/diff-rCore-Tutorial-Code-2023S-user.diff)修改代码，然后再跑一遍，确保能正常运行
-3. 下载SiFive提供的[risc-v工具链](https://static.dev.sifive.com/dev-tools/riscv64-unknown-elf-gcc-8.3.0-2020.04.1-x86_64-linux-ubuntu14.tar.gz)。下载后将该文件复制到home目录下并解压. 将其中的bin/文件夹加入环境变量.
-4. `cd ..../your_dir/ && git clone https://github.com/chenzhiy2001/code-debug.git && cd code-debug/ && npm install` (确保您已经安装了较新版本的npm)
-5. 打开vscode，打开your_dir/code-debug/文件夹.
-6. 切换到`br-chenzhiy2001-hardcode-for-2023S`分支，然后将code-debug/src/frontend/extension.ts中的16行改成您要debug的rCore的位置，比如os.homedir() + "/rCore-Tutorial-Code-2023S"，再`npm install`.
-    1. 如果您不想这么做，而是想留在`master`分支，那么请参照[这里](#硬编码数据修改).
-7. 保存，然后按f5,会弹出一个新的vscode窗口. 在新窗口中打开rCore-Tutorial-Code-2023S/
-8. 在 .vscode 文件夹中添加 launch.json文件，并输入以下内容（注意有三处`${userHome}/your/path/to/rCore-Tutorial-Code-2023S`要修改成你的rCore的位置），保存后再编译运行一遍rCore，然后按F5就可以启动gdb并调试。
+
+1. 运行一遍 rCore-Tutorial-Code-2023S ch9
+2. 根据这
+   个[diff 文件](https://github.com/chenzhiy2001/code-debug/blob/master/docs/diff-rCore-Tutorial-Code-2023S-kernel.diff)修
+   改代码，然后进入 user 目录，根据这
+   个[diff 文件](https://github.com/chenzhiy2001/code-debug/blob/master/docs/diff-rCore-Tutorial-Code-2023S-user.diff)修
+   改代码，然后再跑一遍，确保能正常运行
+3. 下载 SiFive 提供
+   的[risc-v 工具链](https://static.dev.sifive.com/dev-tools/riscv64-unknown-elf-gcc-8.3.0-2020.04.1-x86_64-linux-ubuntu14.tar.gz)。
+   下载后将该文件复制到 home 目录下并解压. 将其中的 bin/文件夹加入环境变量.
+4. `cd ..../your_dir/ && git clone https://github.com/chenzhiy2001/code-debug.git && cd code-debug/ && npm install`
+   (确保您已经安装了较新版本的 npm)
+5. 打开 vscode，打开 your_dir/code-debug/文件夹.
+6. 切换到`br-chenzhiy2001-hardcode-for-2023S`分支，然后将 code-debug/src/frontend/extension.ts 中的
+   16 行改成您要 debug 的 rCore 的位置，比如 os.homedir() + "/rCore-Tutorial-Code-2023S"，
+   再`npm install`.
+   1. 如果您不想这么做，而是想留在`master`分支，那么请参照[这里](#硬编码数据修改).
+7. 保存，然后按 f5,会弹出一个新的 vscode 窗口. 在新窗口中打开 rCore-Tutorial-Code-2023S/
+8. 在 .vscode 文件夹中添加 launch.json 文件，并输入以下内容（注意有三
+   处`${userHome}/your/path/to/rCore-Tutorial-Code-2023S`要修改成你的 rCore 的位置），保存后再编译运
+   行一遍 rCore，然后按 F5 就可以启动 gdb 并调试。
    ```
    //launch.json
    {
@@ -58,24 +70,30 @@
        ]
    }
    ```
+
 ## 使用
-1. 等一会，喝杯水，直到DEBUG CONSOLE不再刷新内容
-1. 按TERMINAL可以切换到终端输出
-1. 按下清除所有断点（`removeAllCliBreakpoints`）按钮，在右上角，🗑垃圾桶图标
+
+1. 等一会，喝杯水，直到 DEBUG CONSOLE 不再刷新内容
+1. 按 TERMINAL 可以切换到终端输出
+1. 按下清除所有断点（`removeAllCliBreakpoints`）按钮，在右上角，🗑 垃圾桶图标
 1. 按下设置内核入口（`setKernelInBreakpoints`）按钮
 1. 按下出口断点（`setKernelOutBreakpoints`）按钮
-1. 设置你想要的内核代码和用户程序代码的断点（推荐在main.rs的`trap::init()`设置一个，在ch9b_initproc.rs的`println!("aaaa")`语句设置一个,如果不行的话设置在`fn main() -> i32 {`处）
-1. 按continue按钮(`|▷`)开始运行rCore-Tutorial.接下来不停按`|▷`就行了.
-    1. 当运行到位于内核出口的断点时，插件会自动切换到用户态的断点
-    1. 在用户态程序中如果想观察内核内的执行流，可以点击`gotokernel`按钮，然后点击继续按钮，程序会停在内核的入口断点，这时，可以先把内核出口断点设置好（点击`setKernelOutBreakpoints`按钮），接下来，可以在内核态设置断点，点击继续，运行到内核的出口断点之后，会回到用户态。
+1. 设置你想要的内核代码和用户程序代码的断点（推荐在 main.rs 的`trap::init()`设置一个，在
+   ch9b_initproc.rs 的`println!("aaaa")`语句设置一个,如果不行的话设置在`fn main() -> i32 {`处）
+1. 按 continue 按钮(`|▷`)开始运行 rCore-Tutorial.接下来不停按`|▷`就行了.
+   1. 当运行到位于内核出口的断点时，插件会自动切换到用户态的断点
+   1. 在用户态程序中如果想观察内核内的执行流，可以点击`gotokernel`按钮，然后点击继续按钮，程序会停在
+      内核的入口断点，这时，可以先把内核出口断点设置好（点击`setKernelOutBreakpoints`按钮），接下来
+      ，可以在内核态设置断点，点击继续，运行到内核的出口断点之后，会回到用户态。
 
 ## 硬编码数据修改
-改成一个vscode设置选项可能更方便，欢迎pr:
+
+改成一个 vscode 设置选项可能更方便，欢迎 pr:
 
 1. code-debug/src/mibase.ts
-    1. 1255行，65改成79
-    2. 1264行和343行，135改成148
-    3. 1281行，30改成43
+   1. 1255 行，65 改成 79
+   2. 1264 行和 343 行，135 改成 148
+   3. 1281 行，30 改成 43
 2. code-debug/src/frontend/extension.ts
-    1. 15行initproc改成ch9b_initproc
-    2. 16行改成您要debug的rCore的位置，比如os.homedir() + "/rCore-Tutorial-Code-2023S"
+   1. 15 行 initproc 改成 ch9b_initproc
+   2. 16 行改成您要 debug 的 rCore 的位置，比如 os.homedir() + "/rCore-Tutorial-Code-2023S"
