--- a/docs/2023-07-12.md
+++ b/docs/2023-07-12.md
@@ -5,4 +5,4 @@
     |
     = help: within `spin::mutex::Mutex<(dyn for<'r> FnMut(&'r mut UserContext) + Send + 'static)>`, the trait `Sized` is not implemented for `(dyn for<'r> FnMut(&'r mut UserContext) + Send + 'static)`
 ```
-问彭淳毅
+得问彭淳毅。
