--- a/docs/2023-07-19.md
+++ b/docs/2023-07-19.md
@@ -69,10 +69,7 @@ pub struct ProcessControlBlock {
 ```
 最简单的方式是把path和pid并列，而不是放在ProcessControlBlockInner里，但是这样就破坏rCore-Tutorial原有的设计了：外层放不变数据，内层（inner）放变化的数据（exec()之后path会变，所以path算可变数据）。而要获取内层数据，必须经过UPIntrFreeCell（这玩意大致就是“无中断容器”）的inner_exclusive_access. 这个设计对调试不太友好，不过还是有解决办法的，就是浅拷贝一份
 
-不对，浅拷贝之前不还得inner_exclusive_access......绕不开啊
+不对，浅拷贝之前不还得inner_exclusive_access......绕不开啊。
 
-那只剩一个办法了，看下是谁占用了
+不过，好消息是，至少uprobe库是成功引入了，否则根本就不会报这个错。
 
-看来只能去改一下UPIntrFreeCell的定义了。
-
-好消息是，库成功引入了，坏消息是，
