update journal & thesis

--- a/docs/2023-07-26.md
+++ b/docs/2023-07-26.md
@@ -389,3 +389,4 @@ main也不行。
 
 还有一个可能的错因，就是，os真正运行的是matrix.bin而不是matrix，在将matrix处理成matrix.bin的时候（主要工作是去掉符号表），一些地址发生了变化。
 
+我在matrix函数里加了输出，直接在程序里面输出程序的地址，这证明上一段的猜测不对。向老师说还是我页表项改错了。
