--- a/docs/2023-08-06.md
+++ b/docs/2023-08-06.md
@@ -15,4 +15,9 @@
 在开始使用调试器之前，我们阅读了这个服务器的源代码，从而大致了解了它的工作流程：当服务器启动，进入到main函数后，main函数就会调用`listen()`库函数，在80端口开始监听。如果接收到客户端的连接，就调用handle_tcp_client 函数处理来自客户端的请求。handle_tcp_client 函数会先读取请求并检查是否为有效的 HTTP GET 请求，如果是的话，就从请求中提取出 URL ，并返回 URL 对应的 HTML 网页。此外，如果用户访问的是 `/close` 页面，服务器会在返回一个表示服务器关闭的网页后终止连接，并关闭服务器自身。
 
 ## Debug过程
-首先，我们想知道
+首先，我怀疑服务器是否接收到了所有的 HTTP 请求。因此我们在服务器的 accept() 函数设置一个 eBPF 断点。这个 eBPF 断点会返回当前的所有寄存器值。从而获得`accept`函数的返回值和参数。
+
+
+
+
+这样，这个bug就被修复了。在整个Debug的过程中我们不需要改动任何源代码。
