--- a/docs/2023-08-06.md
+++ b/docs/2023-08-06.md
@@ -17,7 +17,45 @@
 ## Debug过程
 首先，我怀疑服务器是否接收到了所有的 HTTP 请求。因此我们在服务器的 accept() 函数设置一个 eBPF 断点。这个 eBPF 断点会返回当前的所有寄存器值。从而获得`accept`函数的返回值和参数。
 
+设置断点后，我们打开服务器，重复访问同一个网址。发现了两个异常现象：
+1. 在浏览器尚未访问网址时，accept()函数就被调用了一次。
+2. 浏览器打开六个标签页（每一个标签页都向服务器请求同一个网址），只有四个标签页正确显示出了内容。accept()函数在这段时间内只触发了四次断点，正常状况下应该是六个断点才对。
 
+这个初步的尝试显示，问题可能出在内核没有成功接收到所有的 HTTP 请求，或者内核接收到了所有的请求，却没有全部传送给应用程序。
 
+为了确认具体的出错位置，我们从内核网络栈的代码到系统调用,再到用户态程序上设置了多个内核和应用程序的eBPF断点，看看是哪个环节出了问题。
 
-这样，这个bug就被修复了。在整个Debug的过程中我们不需要改动任何源代码。
+内核函数如下：
+| 函数名                | 地址             |
+|-----------------------|------------------|
+| receive               | 000000008021c0ca |
+| net_interrupt_handler | 0000000080212c24 |
+| sys_accept            | 0000000080216e5a |
+| syscall               | 000000008021315e |
+
+syscall不行，用GDB
+
+用户函数如下：
+| 函数名 | 地址             |
+|--------|------------------|
+| listen | 0x000109fe |
+| accept | 0x00010a1c |
+
+设置完断点后，
+
+In firefox, every tab is a thread while in Chrome every tab is a process. Is this bug appear in Chrome?
+
+我们大概定位到了出错位置：。再利用 GDB 的单步调试
+
+这样，结合 eBPF 和 GDB 两种调试手段，这个bug被快速定位并修复了。除了这一处代码，在整个Debug的过程中，我们不需要出于调试目的而改动任何其他的源代码。
+
+## 另一个bug
+```rust
+[ INFO] Device features (empty)
+[DEBUG] Got MAC=[0, 0, 0, 0, 0, 0], status=(empty)
+[ERROR] [kernel] Panicked at src/drivers/net/mod.rs:41 can't create net device by virtio: InvalidParam
+---START BACKTRACE---
+#0:ra=0x80219f12
+#1:ra=0x80246fb6
+```
+这个是launch.json中qemu启动参数不对，没有注册网络端口导致的。
